metabase/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
spec:
  selector:
    matchLabels:
      app: metabase
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
      - image: metabase/metabase:v0.39.4
        name: metabase
        ports:
        - containerPort: 3000
          name: metabase
        volumeMounts:
        - name: metabase-ps
          mountPath: /metabase-data
      volumes:
      - name: metabase-ps
        persistentVolumeClaim:
          claimName: metabase-pv-claim
