metabase/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: metabase
  clusterIP: None
